# cdroid_demo1

./: .gitignore  CMakeLists.txt  README.md  date2ver  main.cc
assets/drawable/: bg_can_shu_setting.xml  bg_fuzhu_btn.xml  bg_mode_delete.xml  bg_samll.xml  btn_shape.xml  lunbo_selected.xml  lunbo_selected_grey.xml  lunbo_selected_white.xml  mode_add_quxiao.xml  mode_add_sure.xml  point_green.xml  point_red.xml  point_selector.xml  recyclerview_add_detail.xml  recyclerview_mode.xml  recycleview_add.xml  recycleview_add_list.xml  shuang_xiang_jian_tou.xml  xia_hua_xian.xml  xu_xian.xml
assets/layout/: left_layout.xml  main_window.xml  mode_delete_fix.xml  page_home.xml  page_water_mode.xml  page_water_mode_add.xml  page_water_mode_layout.xml  page_water_mode_modify.xml  selected_numpick_baking_mode_choice.xml  selected_numpick_cook_mode_choice.xml  selected_numpick_fuzhu_choice.xml  selected_numpick_hour_choice.xml  selected_numpick_temperature_choice.xml  steam_barbecue_layout.xml  view_pager_down_1.xml  view_pager_down_2.xml  view_pager_up_1.xml  view_pager_up_2.xml
assets/values/: color_list.xml
conf/: cdroid_series_conf.h  defualt_config.h  version.h
src/common/: comm_class.cc  comm_class.h  comm_func.cc  comm_func.h  common.h  crc.cc  crc.h  zzCommon.cc  zzCommon.h
src/data/: conf_mgr.cc  conf_mgr.h  json_func.cc  json_func.h  waterModeData.json  waterModeDataLocal.h
src/net/: client.cc  client.h  socket_client.cc  socket_client.h  socket_server.cc  socket_server.h
src/protocol/: cmd_handler.cc  cmd_handler.h  conn_mgr.cc  conn_mgr.h  ipacket_buffer.h  mcu_ui.h  packet_buffer.cc  packet_buffer.h  proto.h  uart_client.cc  uart_client.h
src/uart/: test.cc  uart.cc  uart.h  uart2socket.h
src/viewlibs/: arc_seekbar.cc  arc_seekbar.h  libs.h  paint.cc  paint.h  time_textview.cc  time_textview.h
src/windows/: ModeData.h  RecyclerViewAdapter.cc  RecyclerViewAdapter.h  my_viewpager_adapter_down.cc  page_home.cc  (+16 more)
